<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:contentDescription="@drawable/face"
        app:srcCompat="@drawable/face" />


    <ImageView
        android:id="@+id/linkedinLink"
        android:layout_width="63dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:contentDescription="@drawable/icons8_linkedin"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/icons8_linkedin" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mail"
        android:textIsSelectable="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:text="@string/name"
        android:textIsSelectable="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.505" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:text="@string/mbl"
        android:textIsSelectable="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.574" />


    <Button
        android:id="@+id/resume_btn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="130dp"
        android:layout_height="61dp"
        android:text="@string/resume"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.545" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="352dp"
        android:layout_height="67dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823">

        <Button
            android:id="@+id/skillBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/skill" />

        <Button
            android:id="@+id/eduBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/edu" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="352dp"
        android:layout_height="67dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931">

        <Button
            android:id="@+id/expBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/exp" />

        <Button
            android:id="@+id/prjBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/prj" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="370dp" />

</androidx.constraintlayout.widget.ConstraintLayout>